--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     font-family: 'Dancing Script', cursive;
     font-size: 1.3rem;
     color: var(--slogan-color);
-    margin-top: -10px;  /* plus proche du titre */
+    margin-top: -10px;
     margin-bottom: 0;
   }
 
@@ -116,16 +116,17 @@
   }
 
   main {
-    max-width: 900px;
+    max-width: 1200px; /* plus large pour le container horizontal */
     margin: 0 auto 56px;
     padding: 0 20px;
   }
 
   .intro {
+    max-width: 900px;
+    margin: 0 auto 40px;
     background: var(--gray-light);
     border-radius: 12px;
     padding: 22px;
-    margin-bottom: 30px;
     text-align: center;
     box-shadow: 0 6px 20px rgba(0,0,0,0.03);
     animation: fadeInUp .75s ease both;
@@ -134,39 +135,36 @@
   .intro p { margin-bottom: 12px; color: #222; }
   .intro p.lead { font-weight: 600; font-size: 1.05rem; color: #111; }
 
-  /* Conteneur verset + encouragement */
-  .daily-messages-container {
-    max-width: 900px;
-    margin: 40px auto 60px;
-    padding: 0 20px;
+  /* Conteneur horizontal principal avec 3 colonnes */
+  .main-flex-container {
     display: flex;
     gap: 40px;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
   }
 
-  .daily-message {
+  /* Colonne verset et encouragement */
+  .side-column {
     background: var(--gray-light);
     border-radius: 12px;
     padding: 24px 20px;
     box-shadow: 0 6px 20px rgba(0,0,0,0.04);
-    flex: 1 1 48%;
-    min-width: 280px;
+    width: 280px;
     opacity: 0;
     transform: translateY(10px);
     transition: opacity 1.5s ease, transform 1.5s ease;
   }
 
-  .daily-message.visible {
+  .side-column.visible {
     opacity: 1;
     transform: translateY(0);
   }
 
-  .daily-message h2 {
+  .side-column h2 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     font-size: 1.4rem;
-    margin-bottom: 12px;
+    margin-bottom: 15px;
     color: var(--text-color);
     text-align: center;
   }
@@ -177,6 +175,10 @@
     font-size: 1.25rem;
     color: #5a2e00;
     text-align: center;
+    min-height: 330px; /* hauteur pour faire environ 2x hauteur image */
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   #daily-encouragement {
@@ -184,27 +186,28 @@
     color: #333333;
     line-height: 1.5;
     text-align: center;
+    min-height: 330px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
-  /* Section avec images */
-  .flex-row {
+  /* Colonne centrale des 3 blocs */
+  .center-column {
     display: flex;
+    flex-direction: column;
     gap: 20px;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-wrap: wrap;
+    width: 580px;
   }
 
   .section-block {
     background: var(--gray-light);
     border-radius: 14px;
     padding: 14px;
-    flex: 1 1 30%;
     box-shadow: 0 6px 18px rgba(0,0,0,0.04);
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: 220px;
     transition: transform .22s ease, box-shadow .22s ease, opacity 1.5s ease;
     opacity: 0;
     transform: translateY(10px);
@@ -226,10 +229,10 @@
 
   .section-block img {
     width: 100%;
-    max-width: 320px;
+    max-width: 580px;
+    height: 190px;
     border-radius: 10px;
     object-fit: cover;
-    height: 190px;
     margin-bottom: 12px;
     box-shadow: 0 6px 18px rgba(0,0,0,0.06);
   }
@@ -290,22 +293,40 @@
   }
 
   /* Responsive tweaks */
-  @media (max-width: 900px) {
-    .section-block { flex: 1 1 45%; }
-    .daily-messages-container {
-      flex-direction: column;
-      gap: 30px;
+  @media (max-width: 1200px) {
+    main {
+      max-width: 900px;
     }
-    .daily-message {
-      min-width: 100%;
+    .main-flex-container {
+      flex-direction: column;
+      gap: 40px;
+      align-items: center;
+    }
+    .side-column {
+      width: 100%;
+      max-width: 500px;
+      min-height: auto;
+      padding: 20px;
+    }
+    #daily-verse, #daily-encouragement {
+      min-height: auto;
+      padding: 10px 0;
+      display: block;
+      text-align: center;
+    }
+    .center-column {
+      width: 100%;
+      max-width: 900px;
+    }
+    .section-block img {
+      max-width: 100%;
+      height: auto;
     }
   }
 
   @media (max-width: 640px) {
     header h1 { font-size: 2.2rem; }
     header img.logo { height: 72px; }
-    .section-block { flex: 1 1 100%; max-width: 100%; }
-    .section-block img { height: auto; object-fit: contain; }
     .btn-row {
       flex-direction: column;
       gap: 12px;
@@ -338,7 +359,7 @@
     </ul>
   </nav>
 
-  <!-- Main content -->
+  <!-- Intro -->
   <main>
     <div class="intro" role="region" aria-labelledby="intro-title">
       <p class="lead"><strong>Tu es une personne de valeur.</strong></p>
@@ -346,37 +367,40 @@
       <p>Nous t’accompagnons grâce à l’écoute bienveillante de nos conseillers, la prière (si tu le souhaites), des paroles d’encouragement et des témoignages réels de transformation.</p>
     </div>
 
-    <!-- Conteneur verset + encouragement -->
-    <div class="daily-messages-container" role="region" aria-label="Verset et encouragement du jour">
-      <section class="daily-message left-column" aria-labelledby="verse-title">
+    <!-- Conteneur horizontal avec 3 colonnes -->
+    <div class="main-flex-container" role="region" aria-label="Verset, Mission et Encouragement">
+
+      <!-- Verset à gauche -->
+      <section class="side-column" aria-labelledby="verse-title">
         <h2 id="verse-title">Verset du jour</h2>
         <div id="daily-verse">Chargement du verset...</div>
       </section>
 
-      <section class="daily-message right-column" aria-labelledby="encouragement-title">
+      <!-- Centre avec les 3 blocs -->
+      <div class="center-column" aria-live="polite">
+        <section class="section-block" aria-labelledby="mission-title">
+          <h2 id="mission-title">Notre mission</h2>
+          <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/MIssoin.png" alt="Notre mission" />
+          <p>Faire découvrir l’amour de Dieu : pas pour imposer une religion, mais pour restaurer la relation entre Dieu et l’homme.</p>
+        </section>
+
+        <section class="section-block" aria-labelledby="comme-dieu-title">
+          <h2 id="comme-dieu-title">Comme Dieu te voit</h2>
+          <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/tigre.jpg" alt="Comme Dieu te voit" />
+          <p>Tu es précieux aux yeux de Dieu, créé avec amour et destiné à accomplir de grandes choses. Ne doute jamais de ta valeur.</p>
+        </section>
+
+        <section class="section-block" aria-labelledby="gratitude-title">
+          <h2 id="gratitude-title">Vivre avec gratitude</h2>
+          <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/grateful.png" alt="Vivre avec gratitude" />
+          <p>La gratitude transforme notre regard sur la vie, elle ouvre le cœur à la joie et à la paix. Chaque jour est une nouvelle occasion de remercier pour les bénédictions, grandes ou petites.</p>
+        </section>
+      </div>
+
+      <!-- Encouragement à droite -->
+      <section class="side-column" aria-labelledby="encouragement-title">
         <h2 id="encouragement-title">Encouragement du jour</h2>
         <p id="daily-encouragement">Voici un message d'encouragement pour aujourd'hui. Tu peux le changer chaque jour.</p>
-      </section>
-    </div>
-
-    <!-- Section avec images -->
-    <div class="flex-row" aria-live="polite">
-      <section class="section-block" aria-labelledby="mission-title">
-        <h2 id="mission-title">Notre mission</h2>
-        <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/MIssoin.png" alt="Notre mission" />
-        <p>Faire découvrir l’amour de Dieu : pas pour imposer une religion, mais pour restaurer la relation entre Dieu et l’homme.</p>
-      </section>
-
-      <section class="section-block" aria-labelledby="comme-dieu-title">
-        <h2 id="comme-dieu-title">Comme Dieu te voit</h2>
-        <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/tigre.jpg" alt="Comme Dieu te voit" />
-        <p>Tu es précieux aux yeux de Dieu, créé avec amour et destiné à accomplir de grandes choses. Ne doute jamais de ta valeur.</p>
-      </section>
-
-      <section class="section-block" aria-labelledby="gratitude-title">
-        <h2 id="gratitude-title">Vivre avec gratitude</h2>
-        <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/grateful.png" alt="Vivre avec gratitude" />
-        <p>La gratitude transforme notre regard sur la vie, elle ouvre le cœur à la joie et à la paix. Chaque jour est une nouvelle occasion de remercier pour les bénédictions, grandes ou petites.</p>
       </section>
     </div>
 
@@ -415,21 +439,23 @@
           document.getElementById("daily-verse").textContent =
             "Impossible de charger le verset du jour.";
         });
+    });
+  </script>
 
-      // Observer fade-in pour .section-block et .daily-message et .btn-primary
-      function onEntry(entry) {
-        entry.forEach(change => {
-          if (change.isIntersecting) {
-            change.target.classList.add('visible');
-          }
-        });
-      }
-      let options = { threshold: [0.2] };
-      let observer = new IntersectionObserver(onEntry, options);
-
-      document.querySelectorAll('.section-block, .daily-message, .btn-primary').forEach(el => {
-        observer.observe(el);
+  <!-- Fade-in on scroll script -->
+  <script>
+    function onEntry(entry) {
+      entry.forEach(change => {
+        if (change.isIntersecting) {
+          change.target.classList.add('visible');
+        }
       });
+    }
+
+    let options = { threshold: [0.2] };
+    let observer = new IntersectionObserver(onEntry, options);
+    document.querySelectorAll('.section-block, .side-column, .btn-primary').forEach(block => {
+      observer.observe(block);
     });
   </script>
 
