--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   }
 
   .intro {
-    background: var(--gray-light);
+    /* background: var(--gray-light); supprimé */
     border-radius: 12px;
     padding: 22px;
     margin-bottom: 30px;
